{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 54,
  "lineage": "4fd03d60-a35a-e2ff-4141-e6770c73a581",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:034490920638:loadbalancer/ec2-elb",
            "availability_zones": [
              "sa-east-1a",
              "sa-east-1b",
              "sa-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "ec2-elb-814744599.sa-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "ec2-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0dbf1a577087954fc",
              "i-0e44218481e4c211c"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "ec2-elb",
            "security_groups": [
              "sg-0a73c6e33eca4feaa"
            ],
            "source_security_group": "034490920638/default_elb_450cefe5-ce6e-39fe-8264-4c517bf216da",
            "source_security_group_id": "sg-0a73c6e33eca4feaa",
            "subnets": [
              "subnet-695a220f",
              "subnet-7b601e32",
              "subnet-95e0a7ce"
            ],
            "tags": {
              "Name": "ec2-elb"
            },
            "tags_all": {
              "Name": "ec2-elb"
            },
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_instance.servidor1",
            "aws_instance.servidor2",
            "aws_security_group.http",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "servidor1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-054a31f1b3bf90920",
            "arn": "arn:aws:ec2:sa-east-1:034490920638:instance/i-0dbf1a577087954fc",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dbf1a577087954fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-011d2b0f2a493eae9",
            "private_dns": "ip-172-31-11-26.sa-east-1.compute.internal",
            "private_ip": "172.31.11.26",
            "public_dns": "ec2-18-228-117-203.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.117.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6294f070ae59dba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-elb-sg",
              "ec2-elb-sg-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-695a220f",
            "tags": {
              "Name": "Servidor1"
            },
            "tags_all": {
              "Name": "Servidor1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dbba1b494364c68",
              "sg-06cad17c71f759014"
            ]
          },
          "dependencies": [
            "aws_security_group.http",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "servidor2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-054a31f1b3bf90920",
            "arn": "arn:aws:ec2:sa-east-1:034490920638:instance/i-0e44218481e4c211c",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e44218481e4c211c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0393224538dd6b5ee",
            "private_dns": "ip-172-31-5-230.sa-east-1.compute.internal",
            "private_ip": "172.31.5.230",
            "public_dns": "ec2-18-231-198-167.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.231.198.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04569c0866f3e4f38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-elb-sg",
              "ec2-elb-sg-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-695a220f",
            "tags": {
              "Name": "Servidor2"
            },
            "tags_all": {
              "Name": "Servidor2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dbba1b494364c68",
              "sg-06cad17c71f759014"
            ]
          },
          "dependencies": [
            "aws_security_group.http",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:034490920638:security-group/sg-06cad17c71f759014",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-06cad17c71f759014",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-elb-sg",
            "name_prefix": "",
            "owner_id": "034490920638",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-fc3df29a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:034490920638:security-group/sg-05dbba1b494364c68",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05dbba1b494364c68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-elb-sg-ssh",
            "name_prefix": "",
            "owner_id": "034490920638",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-fc3df29a"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}